# pyrtc-volcengine-third

./: pyproject.toml
examples/rtc-terminal/: .env.example  config.py  main.py  pyproject.toml
examples/rtc-terminal-llm/: .env.example  main.py  pyproject.toml
examples/rtc-terminal-llm/app/: dialog_session.py  llm.py
examples/rtc-terminal/app/: audio_manager.py  config.py  dialog_session.py
pyrtc_volcengine/: dialog_session.py  logger.py  realtime_dialog_client.py
pyrtc_volcengine/extra/: vad.py
