[project]
name = "rtc-terminal-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.13",
    "pyaudio>=0.2.14",
    "pyrtc-volcengine-third[vad]",
    "python-dotenv>=1.1.0",
]

[tool.uv.sources]
pyrtc-volcengine-third = { path = "../../" }
